# interlace

./: .buildinfo  .gitignore  CASE_STUDIES.html  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FRONTRUN_DEFECTS.md  FUTURE_WORK.md  IMPLEMENTATION.md  LICENSE  MANIFEST.in  Makefile  README.md  SKILL.md  _startdocker.sh  api_reference.html  approaches.html  bench_dp.py  dpor.html  dpor_guide.html  examples.html  genindex.html  index.html  installation.html  internals.html  objects.inv  orm_race.html  py-modindex.html  pyproject.toml  quickstart.html  redis.html  release-version.sh  search.html  searchindex.js  sql-technical-details.html  tags  test_defect10_stampede_reproduction.py  trace_filtering.html  (+1 more)
.github/workflows/: build-wheels.yml  ci.yml  docs-debug.yml  docs.yml  release.yml
_modules/: index.html
_modules/frontrun/: _trace_format.html  _tracing.html  async_scheduler.html  async_shuffler.html  async_trace_markers.html  bytecode.html  common.html  dpor.html  trace_markers.html
_sources/: dpor.rst.txt  dpor_guide.rst.txt  examples.rst.txt  index.rst.txt  orm_race.rst.txt
_static/: dpor_bank_transfer.html  dpor_bank_transfer_locked.html  dpor_dining_philosophers.html  dpor_sqlite_counter.html  dpor_sqlite_counter_fixed.html
benchmarks/: baseline_results.json  bench_dining_philosophers.py  post-optimal-dpor_results.json  source_sets_v1_results.json  source_sets_v2_results.json  wakeup_tree_final_results.json  wakeup_tree_results.json
crates/dpor/: Cargo.toml
crates/io/: Cargo.toml
debug/: .buildinfo  CASE_STUDIES.html  api_reference.html  approaches.html  dpor.html  dpor_guide.html  examples.html  genindex.html  index.html  installation.html  internals.html  objects.inv  orm_race.html  py-modindex.html  quickstart.html  redis.html  search.html  searchindex.js  sql-technical-details.html  trace_filtering.html
debug/_modules/: index.html
debug/_sources/: CASE_STUDIES.rst.txt  index.rst.txt  internals.rst.txt
debug/_static/: dpor_bank_transfer.html  dpor_bank_transfer_locked.html  dpor_dining_philosophers.html  dpor_sqlite_counter.html  dpor_sqlite_counter_fixed.html
docs/: CASE_STUDIES.rst  Makefile  api_reference.rst  approaches.rst  conf.py  dpor.rst  dpor_guide.rst  examples.rst  index.rst  installation.rst  internals.rst  orm_race.rst  postgres_races.rst  quickstart.rst  redis.rst  search.rst  sql-technical-details.rst  trace_filtering.rst  vector-clocks.rst
docs/_static/: custom.css
docs/case_studies/: CASE_STUDIES.rst  CONCURRENCY_TESTING_RESULTS.md
docs/tests/: test_cachetools_exhaustive.py  test_cachetools_real.py  test_pydis_exhaustive.py  test_pydis_real.py  test_pydispatcher_exhaustive.py  test_pydispatcher_real.py  test_threadpoolctl_exhaustive.py  test_threadpoolctl_real.py  test_tpool_exhaustive.py  test_tpool_real.py
examples/: django_orm_race.py  dpor_bank_transfer.py  dpor_bank_transfer_locked.py  dpor_dining_philosophers.py  dpor_sqlite_counter.py  orm_race.py  postgres_races.py
frontrun/: __init__.py  _async_autopause.py  _cooperative.py  _deadlock.py  _io_detection.py  _marker_coordination.py  _opcode_observer.py  _patching.py  _preload_io.py  _random_schedules.py  _real_threading.py  _redis_client.py  _redis_client_async.py  _redis_command_data.py  _redis_parsing.py  _redis_patch_registry.py  _report.py  _report_template.html  _schema.py  _sql_anomaly.py  _sql_cursor.py  _sql_cursor_async.py  _sql_db_scope.py  _sql_endpoint_suppression.py  _sql_insert_tracker.py  _sql_lock_intent_data.py  _sql_params.py  _sql_parsing.py  _sql_patch_registry.py  _sql_predicates.py  _sql_row_locks.py  _sql_transactions.py  _strategy.py  _threaded_runner.py  _trace_format.py  _trace_marker_runtime.py  _tracing.py  async_bytecode.py  async_dpor.py  async_scheduler.py  (+9 more)
frontrun-dpor/: Cargo.toml  pyproject.toml
frontrun-dpor/src/: engine.rs  lib.rs  object.rs  path.rs  vv.rs
frontrun/_dpor_core/: __init__.py  concurrency.py  engine.py  failures.py  invariants.py  row_locks.py  utils.py
frontrun/_dpor_runtime/: __init__.py  _shared.py  explore.py  (+4 more)
ideas/: KNOWN_ISSUES.md  REMAINING_SQL_TODOS.md  SQL_CONFLICT.md  SQL_CONFLICT_SPLIT_INFO.md  TRACKING_TRANSACTION_IDS.md  badideas.md  coverage_and_invariants.md  detecting_stateful_resources.md  developer-marketing.md  dpor_spec.md  frontrun_defect_15.md  known_issues.md  loom_style_primitives.md  optimal_dpor.md  property_based_marker_schedules.md  random_dpor.md  reducing_trace_overcounting.md  search_strategies.md  tla_plus_integration.md  whatever.md
interlace/: Makefile  __init__.py  async_bytecode.py  async_mock_events.py  async_scheduler.py  async_trace_markers.py  bytecode.py  common.py  mock_events.py  trace_markers.py
scripts/: rebuild.sh  screenshot_deadlock.py
specs/: .gitignore  DporSqlScheduling.cfg  DporSqlScheduling.tla  SqlConflictRefinement.cfg  SqlConflictRefinement.tla  SuppressionSafety.cfg  SuppressionSafety.tla
tests/: buggy_programs.py  conftest.py  repro_bug_2.py  sql_test_helpers.py  test_assert_holds.py  test_async_bytecode.py  test_async_dpor.py  test_async_exact_mazurkiewicz_trace_count.py  test_async_mock_events.py  test_async_shuffler.py  test_async_trace_markers.py  test_bug_condition_notify.py  test_bug_record_access_merge.py  test_bug_sql_quoted_schema.py  test_bug_swarm_fixes.py  test_bugfix_cache_deadlock_async.py  test_bugfixes.py  test_bytecode.py  test_cli.py  test_concurrency_bug_classes.py  test_contrib_bugs.py  test_deadlock.py  test_defect10_stampede_reproduction.py  test_defect11_multi_lock_races.py  test_defect11_rlock_gc_deadlock.py  test_defect13_sql_row_locking.py  test_defect16_free_threaded_waiter_reblocking.py  test_defect16_io_anchored_replay.py  test_defect16_lock_depth_io_window.py  test_defect6_scheduler_deadlock.py  test_defect6_update_insert_phantom.py  test_defect7_gc_deadlock.py  test_defect8_evalsha_atomicity.py  test_defect9_redis_reproduction.py  test_defect_1_fix.py  test_defect_shared_socket_deadlock.py  test_defects_3_4.py  test_depth_biased_dpor.py  test_dpor.py  test_dpor_concurrent_connect_deadlock.py  (+68 more)
(+114 files in other folders)
