[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["interlace"]

[project]
name = "interlace"
version = "0.1.0"
description = "A library for deterministic concurrency testing that helps you reliably reproduce and test race conditions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MPL-2.0"}
authors = [
    {name = "Lucas Wiman", email = "lucas.wiman@gmail.com"},
]
keywords = ["concurrency", "testing", "race-conditions", "threads", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lucaswiman/interlace"
Repository = "https://github.com/lucaswiman/interlace.git"
Documentation = "https://interlace.readthedocs.io/"
Changelog = "https://github.com/lucaswiman/interlace/blob/main/CHANGELOG.rst"
Issues = "https://github.com/lucaswiman/interlace/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "hypothesis>=6.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "A", "C4", "ISC", "PIE", "Q", "LOG", "PERF"]
ignore = [
    "E402",   # Module level import not at top of file (valid in conftest.py)
    "E501",   # Line too long (conflicts with docstring formatting in some cases)
    "F841",   # Unused variable (often intentional in test setup)
    "C408",   # Unnecessary dict() call (dict() with kwargs is more readable)
    "PERF203",  # try-except in loop (performance suggestion, acceptable for test code)
]

[tool.pyright]
include = ["interlace"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.10"
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportPrivateUsage = false
venvPath = "."
venv = ".venv"
